test/corpus/scientific-notation.txt
================================================================================
Scientific notation - basic positive exponent
================================================================================

2023-01-01 Scientific notation test
    assets:stocks    1.5e10 USD
    income:investment

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Scientific notation - negative exponent
================================================================================

2023-01-01 Small amounts
    assets:micro    2.5e-6 BTC
    expenses:fees    -1.0e-3 BTC

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Scientific notation - capital E
================================================================================

2023-01-01 Capital E notation
    assets:large    3.14E+8 USD
    income:windfall

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Scientific notation - integer with exponent
================================================================================

2023-01-01 Integer scientific
    assets:investment    123e5 USD
    income:compound

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Scientific notation - negative number
================================================================================

2023-01-01 Negative scientific
    expenses:loss    -4.5e3 USD
    assets:trading    4.5e3 USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Scientific notation - commodity before number
================================================================================

2023-01-01 Commodity prefix scientific
    assets:account    $1.2e4
    income:bonus

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Scientific notation - very small decimal
================================================================================

2023-01-01 Tiny amounts
    assets:crypto    .5e-8 BTC
    expenses:dust    -.1e-9 BTC

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Scientific notation - large integer exponent
================================================================================

2023-01-01 Large exponents
    assets:huge    1.5e23 USD
    expenses:calc    -3.14e15 USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Scientific notation - explicit positive exponent
================================================================================

2023-01-01 Positive exponent
    assets:account    2.71E+14 USD
    income:compound

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Scientific notation - explicit negative exponent
================================================================================

2023-01-01 Negative exponent
    assets:small    4.2e-37 BTC
    expenses:fees

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Scientific notation - simple numbers without separators
================================================================================

2023-01-01 Clean scientific notation
    assets:simple    1000e3 USD
    expenses:calc    -250E-2 USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))
