test/corpus/virtual-postings.txt
================================================================================
Virtual posting
================================================================================

2023-01-01 test
    (budget:food)    $10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Balanced virtual posting
================================================================================

2023-01-01 test
    [equity:allocation]    $100

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Mixed posting types
================================================================================

2023-01-01 test
    expenses:food        $10
    assets:checking     -$10
    (budget:food)        $10
    [equity:opening]    -$10

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Virtual posting without amount
================================================================================

2023-01-01 test
    expenses:food    $10
    (budget:food)

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))
